--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,7 @@ body{
     border-radius: 25px;
 }
 
-footer{
+.writeFooter{
     background-color: #F0F0F0;
     text-align: right;
     padding-right: 20px;
@@ -145,8 +145,9 @@ button{
 button:hover{
     background-color: #F0F0F0;
     color: #6D6988;
-    border: 2px solid #555A81;  
+    border: 2px solid #555A81;
     cursor: pointer;
+
 }
 
 .egdeer{ /*use CSS Grids to make this look like the Figma*/
