--- a/assets/style.css
+++ b/assets/style.css
@@ -22,9 +22,8 @@ body{
 .header img{
     display:block;
     margin:auto;
-    padding-top: 115px;
-    padding-bottom: 58px;
-    max-width: 1004px;
+    padding: 20px;
+    max-width: 500px;
     width: 100%;
     height: auto;
 }
@@ -56,7 +55,7 @@ h1{
     margin: auto;
     width: 60%;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 10px;
     font-size: 64px;
 }
 
@@ -74,7 +73,7 @@ h3{
     margin: auto;
     padding: 10px;
     text-align: center;
-    margin-top: 57px;
+    margin-top: 20px;
     overflow: hidden;
 }
 
@@ -184,4 +183,26 @@ button:hover{
 
 .merchandise img{
     margin: 10px;
+}
+
+/*Storyboard Page*/
+.storyboards {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: fit-content;
+}
+
+@media (max-width: 800px) {
+    .storyboards {
+        grid-template-columns: auto;
+
+    }
+}
+
+.animatic {
+    width: 400px;
+    background-color: rgb(219, 219, 219);
+    margin: 20px;
 }
